; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_mktemp.c__mktemp.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_mktemp.c__mktemp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AT_FDCWD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @_mktemp(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @AT_FDCWD, align 4
  %4 = load i8*, i8** %2, align 8
  %5 = call i64 @_gettemp(i32 %3, i8* %4, i32* null, i32 0, i32 0, i32 0)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i8*, i8** %2, align 8
  br label %10

9:                                                ; preds = %1
  br label %10

10:                                               ; preds = %9, %7
  %11 = phi i8* [ %8, %7 ], [ null, %9 ]
  ret i8* %11
}

declare dso_local i64 @_gettemp(i32, i8*, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
